vlib/v/checker/tests/undeclared_c_identifier_err.vv
#include <errno.h>

fn main() {
	println(C.errono)
}
